# nano_gpt

./: .gitignore  README.md  experiment.ipynb  pyproject.toml
.ipynb_checkpoints/: experiment-checkpoint.ipynb
nanogpt/: bpe.py  dataloader.py  tokenizer.py  trainer.py  transformer.py  utils.py
scripts/: bootstrap_uv.sh
tests/: test_bpe.py  test_dataloader.py  test_tokenizer.py  test_trainer.py
