[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "nanogpt"
version = "0.1.0"
description = "nanoGPT implementation based on Karpathy's lecture with customizations"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "requests>=2.32.0",
  "torch>=2.6.0",
]

[dependency-groups]
dev = [
  "pre-commit>=3.7.0",
  "pytest>=8.3.0",
  "ruff>=0.3.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
# Match Karpathy's style (and PEP 8)
line-length = 88
target-version = "py312"

[tool.ruff.format]
# Use double quotes to be consistent with Black
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, I: isort (auto-sort imports)
select = ["E", "F", "I"]
