[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "nanogpt"
version = "0.1.0"
description = "nanoGPT implementation based on Karpathy's lecture with customizations"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "matplotlib>=3.10.8",
  "numpy>=2.4.3",
  "pandas>=3.0.1",
  "requests>=2.32.0",
  "rich>=14.3.3",
  "torch>=2.6.0",
]

[dependency-groups]
dev = [
  "pre-commit>=3.7.0",
  "pytest>=8.3.0",
  "ruff>=0.3.0",
  "ipykernel>=6.25.0",
  "ipython>=9.11.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
# Use double quotes to be consistent with Black
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
# E: pycodestyle, F: Pyflakes, I: isort (auto-sort imports)
select = ["E", "F", "I"]
